Fix scrollbar css for firefox

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,11 @@ body {
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(black, 1) transparent;
+}
+
 *::-webkit-scrollbar {
   width: 0.5rem;
 }
